fix: 모달 on/off 시 layout shift 현상 수정
- 로그인 모달 on/off시 스크롤바에 의해 layout shift 현상이 발생하던 점 수정했습니다.
- 추가적으로 모달 부분에 ModalWrapper와 ModalOverlay가 겹치는 CSS가 많아 부모자식관계로 수정하여 css 코드를 줄였습니다.
- 또한 모달 등장애니메이션을 top 방식에서 translateY 방식으로 수정하였습니다. 브라우저 렌더링 과정 중 reflow를 유발시키지 않는 방식으로 바꿨기에 미세하겠지만 조금 더 좋은 방법으로 개선했어요
- 제가 아직 데이터가 필요한 다른 모달 부분 ex) cancelButton, studyItem은 데이터가 없어서 확인하지 못했으니 사이드 이펙트 확인바랍니다.

--- a/client/src/component/loading/loadingSpinner.module.css
+++ b/client/src/component/loading/loadingSpinner.module.css
@@ -5,7 +5,6 @@
   display: flex;
   top: 50%;
   margin: 0 auto;
-  transform: translateY(-50%);
 }
 
 .spinnerImg {
