--- a/client/src/component/modal/login_modal/loginModal.module.css
+++ b/client/src/component/modal/login_modal/loginModal.module.css
@@ -2,12 +2,8 @@
   width: 800px;
   height: 550px;
   box-shadow: rgb(0 0 0 / 9%) 0px 2px 12px 0px;
-  position: relative;
   display: flex;
   flex-direction: column;
-  top: -200%;
-  margin: 0 auto;
-  transform: translateY(-50%);
   animation: loginAnimation 0.5s ease 0s 1 normal forwards running;
 }
 
@@ -77,12 +73,12 @@
 @keyframes loginAnimation {
   0% {
     opacity: 0;
-    top: -100%;
+    transform: translateY(-100%);
   }
 
   100% {
     opacity: 1;
-    top: 50%;
+    transform: translateY(0);
   }
 }
 
