--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 @import url(./common/fonts.css);
-
+html {
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   font-family: 'Spoqa Han Sans Neo', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
